{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 121,
  "lineage": "69525144-8e5c-2aeb-19e1-a55b53c2ced1",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.193.216.33",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-10-08T15:58:11.199-07:00",
            "id": "projects/coding-test-mak-final/regions/us-central1/addresses/vm-public-address",
            "name": "vm-public-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "coding-test-mak-final",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coding-test-mak-final/regions/us-central1/addresses/vm-public-address"
          },
          "dependencies": [
            "google_compute_firewall.firewall"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-10-08T15:57:59.440-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/coding-test-mak-final/global/firewalls/firewall-externalssh",
            "log_config": [],
            "name": "firewall-externalssh",
            "network": "https://www.googleapis.com/compute/v1/projects/coding-test-mak-final/global/networks/default",
            "priority": 1000,
            "project": "coding-test-mak-final",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coding-test-mak-final/global/firewalls/firewall-externalssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "externalssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "webserverrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-10-08T15:57:59.459-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/coding-test-mak-final/global/firewalls/firewall-webserver",
            "log_config": [],
            "name": "firewall-webserver",
            "network": "https://www.googleapis.com/compute/v1/projects/coding-test-mak-final/global/networks/default",
            "priority": 1000,
            "project": "coding-test-mak-final",
            "self_link": "https://www.googleapis.com/compute/v1/projects/coding-test-mak-final/global/firewalls/firewall-webserver",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "webserver"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20210927",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/coding-test-mak-final/zones/us-central1-a/disks/devserver"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "dev.codezonebd.com",
            "id": "projects/coding-test-mak-final/zones/us-central1-a/instances/devserver",
            "instance_id": "839216856006751230",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "test-user:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCpmVzV73f/7S3fBWGme488Ccn19Ef10OhfSr5TESqp9blUiaNS5ZMXrc00EENzGb/XySjU5Ga+lsZ78VIBdnWGrWXcr6Cvwh6BHyZL+UFc2nHk51Hsp5llMBfmwew42YrgHnhRKPbqvdP7DdMT/ZtiE+d9Cy2yA77q6SH8yuFVMm4BNvjL04Bjb9FMQqL/Pz5SPxX339OHG44YIlKMmI2ZdPHfT26fqizuMmwWM30pZQwtQRtykzhT1jN4ZU5jdr1FEdYW0M4S35yMsAe/FghmEjOSajJa8OXXB8IUIP0itC9eGjCU6+cGJUsQWPSwZ4qsBJHy64I94zzeBDn9FFYf"
            },
            "metadata_fingerprint": "LQHvE2am7bM=",
            "name": "devserver",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.193.216.33",
                    "network_tier": "PREMIUM",
                    "public_ptr_domain_name": "dev.codezonebd.com."
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/coding-test-mak-final/global/networks/default",
                "network_ip": "10.128.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/coding-test-mak-final/regions/us-central1/subnetworks/default",
                "subnetwork_project": "coding-test-mak-final"
              }
            ],
            "project": "coding-test-mak-final",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/coding-test-mak-final/zones/us-central1-a/instances/devserver",
            "service_account": [
              {
                "email": "coding-test-service-ac@coding-test-mak-final.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "externalssh",
              "webserver"
            ],
            "tags_fingerprint": "Mh9u1hBHiNA=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_address.static",
            "google_compute_firewall.firewall",
            "google_compute_firewall.webserverrule",
            "google_dns_managed_zone.dev"
          ]
        }
      ]
    }
  ]
}